<resources>
    <string name="app_name">PayLabas Merchant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="euro">€</string>
    <string name="nav_drawer_home_en">Home</string>
    <string name="nav_drawer_invoice_en">Invoice Request</string>
    <string name="nav_drawer_reports_en">Reports</string>
    <string name="nav_drawer_notification_en">Notification</string>
    <string name="nav_drawer_profile_en">Profile</string>
    <string name="nav_drawer_abount_en">About Us</string>
    <string name="nav_drawer_contact_en">Contact Us</string>
    <string name="nav_drawer_howitworks_en">How It Works?</string>
    <string name="nav_drawer_faq_en">FAQ</string>
    <string name="nav_drawer_settings_en">Settings</string>
    <string name="nav_drawer_logout_en">Logout</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="title_activity_mobiletopup">MobileTopupActivity</string>
    <string name="my_schedule_tab_desc_a11y">Tap to show your schedule .</string>
    <string name="verify_finish_setup">FINISH SETUP </string>
    <string name="verify_hint_secret_id">Secret ID </string>
    <string name="verify_change_merchant">Change Merchant ? </string>
    <string name="verify_message">We have sent you an SMS with a code to your mobile number. \n\nPlease enter verification code\n</string>
    <string name="cashinout_title">Cash IN/OUT</string>
    <string name="cashinout_tabstrip1">CASH IN</string>
    <string name="cashinout_tabstrip2">CASH OUT</string>
    <string name="money_transfer_title">Money Transfer</string>
    <string name="mobiletopup_title">Mobile Topup</string>
    <string name="mobiletopup_recharge">RECHARGE</string>
    <string name="mobiletopup_history">HISTORY</string>
    <string name="reports_title">Reports</string>
    <string name="tools_title">Tools</string>
    <string name="tabstrip_item1">Convert GC</string>
    <string name="tabstrip_item2">Combine GC</string>
    <string name="button_combinegc">Combine</string>
    <string name="button_add">Add</string>
    <string name="payment_hint_mobile">Mobile</string>
    <string name="payment_hint_gc">Gift Code</string>
    <string name="payment_next">NEXT</string>
    <string name="payment_reset">RESET</string>
    <string name="payment_type_header">Select Payment Type</string>
    <string name="verification_code_message">We have sent you an SMS with a code to your mobile number. \n\nPlease enter verification code\n</string>
    <string name="verification_resend_code_message">OTP is Expired or Invalid\n\n Do you want to resend OTP once agin?</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_service_type">Select Service Type</string>
    <string name="payment_service_amount">Enter Amount</string>
    <string name="payment_finish">PAY NOW</string>
    <string name="euro_symbol">€</string>
    <string name="menu_cashinout">Cash In/Out</string>
    <string name="menu_tools">Tools</string>
    <string name="validation_empty_verification_code">Please Enter Valid Verification Code</string>
    <string name="validation_empty_mobile_number">Please Enter Mobile Number</string>
    <string name="validation_empty_payment_type_selection">Please Select Payment Type</string>
    <string name="validation_empty_gift_code">Please Enter Gift Code</string>
    <string name="validation_empty_service_type">Please Select Service Type</string>
    <string name="validation_empty_amount">Please Enter Amount</string>
    <string name="PaymentStep1_1">Verification Code Send Successfully</string>
    <string name="PaymentStep1_2">Error While Sending Verification Code</string>
    <string name="PaymentStep1_m2">Invalid User</string>
    <string name="PaymentStep1_m3">Error In While Getting Balance</string>
    <string name="PaymentStep1_m4">Low Balance</string>
    <string name="PaymentStep1_m5">GC is Used</string>
    <string name="RedeemGC1_1">GC Redeem Successfully</string>
    <string name="RedeemGC1_2">GC Redeem and Regenerated Successfully</string>
    <string name="RedeemGC1_m1">Error Occure While redeem GC</string>
    <string name="RedeemGC1_m2">GC Redeem Successfully bt Error Occure while Regeneratting new GC </string>
    <string name="RedeemGC1_m3">Lower amount GC</string>
    <string name="RedeemGC1_m4">GC is Used</string>
    <string name="RedeemGC1_m5">Invalid GC</string>
    <string name="network_error_message">Network Error\n</string>
    <string name="login_merchant_and_password_message">Please enter merchant id and Password</string>
    <string name="verification_activity_empty_verification_msg">Please enter verification code</string>
    <string name="title_activity_money_transfer_home">MoneyTransferHomeActivity</string>
    <string name="title_activity_money_transfer_final">MoneyTransferFinalActivity</string>
    <string name="title_activity_cash_in_out">CashInOutActivity</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="title_activity_money">MoneyTransferFinalActivity</string>
    <string name="title_activity_new_generate_gc">NewGenerateGCActivity</string>
    <string name="enter_mobile">Enter mobile no.</string>
    <string name="enter_cashout_amount">Enter cash out amount</string>
    <string name="enter_form_id">Enter Identity Proof Value</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="select_country">Select Country</string>
    <string name="btn_next">NEXT</string>
    <string name="err_mobile">Please Enter Mobile Number</string>
    <string name="err_entercashout">Please Enter Minimum Cash Out Amount 10</string>
    <string name="err_enter_formid">Please Enter FormID</string>
    <string name="err_enter_pin">Please Enter Pin</string>
    <string name="err_invalid_user">Invalid User Details !!!</string>
    <string name="err_insufficient_bal">Cash Out Failed !!! Insufficient Balance</string>
    <string name="err_cashout">Cash Out Failed. Please Try again !!!</string>
    <string name="er_network">Network Error !!! Please Try Again</string>
    <string name="cash_outdone">Cash out done Sucessfully</string>
    <string name="title_activity_invoice_request_main">InvoiceRequestMain</string>
    <string name="title_activity_invoice_request">InvoiceRequestActivity</string>
    <string name="title_activity_cash_claim">CAshClaimActivity</string>
    <string name="title_activity_commission_claim_category_detail">CommissionClaimCategoryDetailActivity</string>
    <string name="act_commision_claim_TO">To</string>
    <string name="act_comision_claim_TOTALAMOUNT">Total Amount:</string>
    <string name="act_comision_claim_$5000">$ 50,000</string>
    <string name="act_comision_claim_REQUEST">Request</string>
    <string name="act_invoice_req_TO">To</string>
    <string name="act_invoice_req_TOTALAMOUNT">Total Amount:</string>
    <string name="act_invoice_req_REQUEST">REQUEST</string>
    <string name="act_invoice_request_main_HOWDOYOUWANTTOCLAIMMONEY">How do you want to claim your money?</string>
    <string name="act_invoice_request_main_GENERATEINVOICE">Generate Invoice</string>
    <string name="act_invoice_request_main_CLAIMINVOICE">Claim Commission</string>
    <string name="activity_mobiletopup_SELECTCOUNTRY">Select Country</string>
    <string name="activity_mobiletopup_SERVICEPROVIDER">Service Provider</string>
    <string name="activity_mobiletopup_SELECTRECHARGEAMOUNT">Select Recharge Amount</string>
    <string name="activity_mobiletopup_NA">N/A</string>
    <string name="activity_moneytransfer_final_TRANSFER">TRANSFER</string>
    <string name="activity_moneytransfer_final_ENTERRECIPIENTSDETAILS">Enter Recipient Details</string>
    <string name="activity_moneytransfer_final_ENTERSENDERDETAILS">Enter Sender Details</string>
    <string name="activity_moneytransfer_final_AMOUNTSEND">Amount Send</string>
    <string name="activity_moneytransfer_final_EURO10">€ 10</string>
    <string name="activity_moneytransfer_final_FEES">Fees: € 10</string>
    <string name="activity_moneytransfer_final_TOTALPAYABLEAMOUNT">Total Payable Amount: € 10</string>
    <string name="activity_moneytransfer_final_RECIPIENTSGETS">Recipient Gets: 10 INR</string>
    <string name="activity_moneytransfer_final_EXCHANGERATE">Exchnage Rate: € 1 = 71.46 INR</string>
    <string name="activity_moneytransfer_home_CLICKTOSELECTPICKUPPOINTS">Click to select cash pickup point</string>
    <string name="activity_moneytransfer_final_NEXT">NEXT</string>
    <string name="activity_moneytransfer_recipients_NEXT">NEXT</string>
    <string name="activity_moneytransfer_final_ONE">One</string>
    <string name="activity_moneytransfer_final_ONE1">One</string>
    <string name="activity_moneytransfer_final_ONE11">One</string>
    <string name="activity_moneytransfer_final_SELECTIDPROOFTYPE">Select Identity Proof Type</string>
    <string name="activity_moneytransfer_final_ZERO">00</string>
    <string name="activity_new_generate_gc_RESET">Reset</string>
    <string name="activity_new_generate_gc_CHECKPRICE">Check Price</string>
    <string name="activity_new_generate_gc_COUNTRY">Country</string>
    <string name="activity_new_generate_gc_MOBILENUMBER">Mobile Number</string>
    <string name="activity_new_generate_gc_ZERO1">000</string>
    <string name="activity_new_generate_gc_AMOUNT">Amount</string>
    <string name="fragment_cash_in_PAY">PAY</string>
    <string name="fragment_cash_in_SELECTCOUNTRYY">Select Country</string>
    <string name="fragment_cash_in_SELECTIDENTITYPROOFTYPE">Select Identity Proof Type</string>
    <string name="fragment_cash_out_EUR">EUR</string>
    <string name="fragment_cash_out_fragment_cash_out_SELECTIDPROOFTYPE">Select Identity Proof Type</string>
    <string name="fragment_combine_gc_ADD">Add</string>
    <string name="fragment_combine_gc_COMBINE">Combine</string>
    <string name="fragment_combine_gc_GIFTCODE">GiftCode</string>
    <string name="fragment_combine_gc_AMT">Amount</string>
    <string name="fragment_combine_gc_ENTERMOBILEDETAILS">Enter Mobile Details</string>
    <string name="fragment_currency_covert_verification_WEHAVESENTYOUSMS">We have sent you an SMS with a code to your mobile number. \n\nPlease enter verification code\n</string>
    <string name="verify">VERIFY</string>
    <string name="fragment_gc_coverter_CONVERT">Convert</string>
    <string name="fragment_gc_coverter_SELECTCURRENCYTYPE">Select Country For Currency</string>
    <string name="fragment_gc_coverter_ENTERMOBILEDETAILS">Enter Mobile Details</string>
    <string name="fragment_gc_coverter_AMMT">Amount</string>
    <string name="fragment_gc_coverter_FROM">From</string>
    <string name="fragment_gc_coverter_EEUR">Euro</string>
    <string name="fragment_gc_coverter_TO">To</string>
    <string name="fragment_gc_coverter_USDOLLAR">US Dollar</string>
    <string name="fragment_generate_gc_RESET">Reset</string>
    <string name="fragment_generate_gc_CHECKPRICE">Check Price</string>
    <string name="fragment_generate_gc_RECIPIENTCONTACT">Receipient Contact</string>
    <string name="fragment_generate_gc_COUNTRY">Country</string>
    <string name="fragment_generate_gc_MOBILENUMBER">Mobile Number</string>
    <string name="fragment_home_TRANSFER">TRANSFER</string>
    <string name="fragment_home_TOPUP">TOPUP</string>
    <string name="fragment_home_GENERATE"> GENERATE</string>
    <string name="xml_FFNAME">First Name</string>
    <string name="xml_LLASTNAME">Last Name</string>
    <string name="xml_EMAILLA">Email address</string>
    <string name="xml_ADDRESS">Address</string>
    <string name="xml_ZIPP">Zip</string>
    <string name="xml_IDPRROOFF">Enter Identity Proof Value</string>
    <string name="xml_MOBBL">Mobile</string>
    <string name="xml_MERCHENTIID">Merchant ID</string>
</resources>