<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".Launcher">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/demo"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:padding="16dp"
        android:background="#cc000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <TextView
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xml_MERCHENTIID"
                android:text="@string/verify_message"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="#fff"
                android:padding="8dp" />

            <EditText
                android:id="@+id/etVerificationCode"
                android:textColor="#000"
                android:layout_marginTop="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verify_hint_secret_id"
                android:background="#fff"
                android:textSize="18sp"
                android:gravity="left"
                android:padding="8dp" />

            <TextView
                android:id="@+id/btnFinishSetup"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_finish_setup"
                android:textColor="#fff"
                android:background="#70ffffff"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="8dp" />

        </LinearLayout>


    </RelativeLayout>

        <TextView
            android:id="@+id/btnNewLogin"
            android:padding="@dimen/activity_margin"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/verify_change_merchant"
            />
</RelativeLayout>
