

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/home_fragment"
    android:layout_height="match_parent"
    android:background="#fff"
     >

    <LinearLayout
        android:layout_above="@+id/btnNext"
        android:layout_alignParentTop="true"
        android:padding="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/icon_mobile"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-condensed"
                android:singleLine="true"
                android:hint="@string/payment_hint_mobile"
                android:inputType="number"
                android:textSize="@dimen/normal_text"
                android:gravity="left|center_vertical"
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/etMobileNumber" />

        </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/normal_text"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"

            android:text="@string/payment_type_header"
            android:layout_height="wrap_content" />
        <Spinner
            android:spinnerMode="dropdown"
            android:id="@+id/spPaymentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/payment_types"
            >

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/gcLayout"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:background="@drawable/ic_giftcard"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-condensed"
                android:singleLine="true"
                android:hint="@string/payment_hint_gc"
                android:inputType="number"
                android:textSize="@dimen/normal_text"
                android:gravity="left|center_vertical"
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/etGiftCode" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/normal_text"
                android:layout_width="match_parent"
                android:textColor="@android:color/black"

                android:text="@string/payment_service_type"
                android:layout_height="wrap_content" />
            <Spinner
                android:spinnerMode="dropdown"
                android:id="@+id/spServiceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/normal_text"
                android:layout_width="wrap_content"
                android:text="@string/euro_symbol"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginLeft="4dp"
                android:fontFamily="sans-serif-condensed"
                android:singleLine="true"
                android:hint="@string/payment_service_amount"
                android:inputType="number"
                android:textSize="@dimen/normal_text"
                android:gravity="left|center_vertical"
                android:textColor="@android:color/black"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/etAmount" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:text="@string/payment_next"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:id="@+id/btnNext"
        android:background="@drawable/button_selector"
        android:textSize="@dimen/normal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>

