

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/home_fragment"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    >

<LinearLayout

   android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:background="@android:color/white"
   >

    <LinearLayout
        android:id="@+id/gcLayout"
        android:background="@color/gray_background"
        android:padding="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:background="@drawable/ic_giftcard"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginLeft="4dp"
            android:textSize="@dimen/normal_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"

            android:text="Gift Code"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="4dp"
            android:textSize="@dimen/normal_text"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"

            android:text="Amount"
            android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/normal_text"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"

            android:text="@string/payment_service_type"
            android:layout_height="wrap_content" />
        <Spinner
            android:spinnerMode="dropdown"
            android:id="@+id/spServiceType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/normal_text"
            android:layout_width="wrap_content"
            android:text="@string/euro_symbol"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginLeft="4dp"
            android:fontFamily="sans-serif-condensed"
            android:singleLine="true"
            android:hint="@string/payment_service_amount"
            android:inputType="number"
            android:textSize="@dimen/normal_text"
            android:gravity="left|center_vertical"
            android:textColor="@android:color/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/etMobileNumber" />

    </LinearLayout>


</LinearLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:text="@string/payment_finish"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:id="@+id/btnPayNow"
        android:background="@drawable/button_selector"
        android:textSize="@dimen/normal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>